--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VUE_APP_BASE_URL=https://192.168.1.9:8080/
-VUE_APP_BASE_API=https://192.168.1.9:3000
+VUE_APP_BASE_URL=http://192.168.1.9:8080/
+VUE_APP_BASE_API=http://www.blockbridge.com.br:3000
