--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VUE_APP_BASE_URL=http:///www.blockbridge.com.br:8080/
+VUE_APP_BASE_URL=http:///www.blockbridge.com.br/
 VUE_APP_BASE_API=http://www.blockbridge.com.br:3000
